k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connectedworld-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: connectedworld
  template:
    metadata:
      labels:
        app: connectedworld
    spec:
      containers:
      - name: connectedworld
        image: hiteshmondaldocker/connectedworld-web:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
