k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connectedworld-service
spec:
  selector:
    app: connectedworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
